	  snprintf() to write the error string we return, as the one
	  formatted value is a simple string, and so altspell_error will
	  always be long enough to hold it.  Also remove unnecessary
	  initialization of altspell_error, refactor so that msglen is
	  no longer needed, and make the error message more similar to
	  what the internal spell checker returns under the same
	  circumstances. (DLR)
  do_spell()
	- When displaying an error message from do_(int|alt)_speller(),
	  don't display the error message corresponding to errno if
	  errno is zero. (David Benbennick)
  do_justify()
	- If constant cursor position display is on, make sure the
	  cursor position is displayed properly when we finish. (DLR)
  allow_pending_sigwinch()
	- Simplify by using the "?" operator instead of an if clause.
	  (DLR)
  main()
	- When opening files with "+LINE,COLUMN" arguments on the
	  command line, don't update the screen when moving to their
	  specified lines and columns. (DLR)
	- Rename variable fill_flag_used to fill_used, for consistency.
	  (DLR)
- nano.h:
	- Since we only use vsnprintf() now, remove the #ifdef block for
	  HAVE_SNPRINTF. (DLR)
	- Remove TOP from the topmidnone enum, and rename it centernone.
	  (DLR)
	- Move stdlib.h, dirent.h, regex.h, and assert.h includes here,
	  as every source file needs them. (DLR)
  proto.h:
	- Add declarations for bad_mbchar and bad_mbchar_len, so that we
	  can use them in display_string() as well as chars.c. (DLR)
- rcfile.c:
  nregcomp()
	- Return TRUE when the compilation succeeds and FALSE otherwise,
	  instead of the other way around. (DLR)
- search.c:
  search_init()
	- Don't blank out last_replace anymore when we get a new string,
	  as it'll be blanked out in do_replace().  Also, consolidate
	  the cases for blank and new search strings, as they now differ
	  only in which string they pass to regexp_init(). (DLR)
  replace_abort()
	- Remove unnecessary update of placewewant. (DLR)
  do_replace()